# requirements_checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
requirements_checker/: logger.py  main.py
requirements_checker/pypi/: search_pypi.py
requirements_checker/requirements/: load_requirements.py
test_python/: exceptions.py  main.py
test_python/pypi/: search_pypi.py  version_pypi.py
test_python/requirements/: load_requirements.py
tests/: test_search_pypi.py  test_version_pypi.py
